--- a/report/report.tex
+++ b/report/report.tex
@@ -22,7 +22,7 @@
 Il est très fréquent pour des traducteurs humains ou des systèmes de traduction automatique de devoir traduire des termes ne possèdant pas d'équivalent dans la langue cible, notamment des noms propres, noms de lieux ou des termes techniques.
 La translittération consiste en la conversion d'un texte d'un système d'écriture à un autre (par exemple de l'arabe vers l'anglais), en substituant des \emph{graphèmes} ou des \emph{phonèmes}.
 
-Dans la littérature scientifique, deux types d'approches existent pour la translittération: les approches basées sur la prononciation, et celles basées sur l'écriture (\cite{OhChoi06}). Des méthodes mixtes existent également. Lorsque le système d'écriture est très différent (par exemple entre l'anglais et le japonais \cite{Knight98}), la prononciation est un approche intéressante.
+Dans la littérature scientifique, deux types d'approches existent pour la translittération: les approches basées sur la prononciation, et celles basées sur l'écriture (\cite{OhChoi06}). Des méthodes mixtes existent également. Lorsque le système d'écriture est très différent (par exemple entre l'anglais et le japonais \cite{Knight98}), la prononciation est une approche intéressante.
 
 Nous ne disposons pas des ressources nécessaires pour travailler avec la transcription phonétique (par ex. des dictionnaires phonétiques), et nos données ne correspondent pas à des équivalents phonétiques (et appartiennent à des alphabets proches). Nous travaillons donc exclusivement sur l'écriture.
 
