--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -52,6 +52,8 @@
     
 \end{frame}
 
+\subsection{Le projet}
+
 \begin{frame}
 \frametitle{Introduction}
 \framesubtitle{Le projet}
@@ -74,13 +76,6 @@
 
 \end{frame}
 
-\section{Translittération}
-
-
-\begin{frame}
-\tableofcontents[currentsection]
-\end{frame}
-
 
 \subsection{Méthodologie}
 
@@ -101,7 +96,21 @@
 où $\delta(y,y')=levenshtein(y,y')$
 		\end{itemize}		
 	\end{block}
+	
+	\begin{alertblock}{}
+	$\Longrightarrow$ Ces métriques seront utilisées tout au long du projet.
+	\end{alertblock}	
+	
 \end{frame}
+
+\section{Translittération}
+
+
+\begin{frame}
+\tableofcontents[currentsection]
+\end{frame}
+
+
 
 \subsection{Translittération par règles de substitution}
 
