--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -1,6 +1,6 @@
 \documentclass{beamer}
  
-\usepackage[french]{babel}
+\usepackage[russian, french]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{amsmath}
@@ -75,6 +75,25 @@
 	\end{block}
 
 \end{frame}
+
+\begin{frame}[fragile]
+\frametitle{Introduction: le projet : exemples}
+\begin{block}{EN-RU}
+%\# vitellin\# \#\foreignlanguage{russian}{\вителлин}\# OR \#\foreignlanguage{russian}{вителлины}\#	other	unknown\\
+%\# telephone\# \#\foreignlanguage{russian}{телефон}\# other unknown
+
+\foreignlanguage{russian}{
+\texttt{\#vitellin\# \#вителлин\# OR \#вителлины\#	other unknown}\\
+\texttt{ \#telephone\# \#телефон\# other unknown}
+}
+
+\end{block}
+\begin{block}{ES-PO}
+\texttt{\#teléfono\# \#telefone\#	other	unknown}\\
+\texttt{\#thermosphaera\# \#thermosphaera\#	other	unknown}
+\end{block}
+\end{frame}
+
 
 \subsection{Méthodologie}
 
