--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -78,17 +78,12 @@
 
 \begin{frame}[fragile]
 \frametitle{Introduction: le projet : exemples}
-\begin{block}{EN-RU}
-%\# vitellin\# \#\foreignlanguage{russian}{\вителлин}\# OR \#\foreignlanguage{russian}{вителлины}\#	other	unknown\\
-%\# telephone\# \#\foreignlanguage{russian}{телефон}\# other unknown
-
+\begin{block}{ENG-RUS}
 \foreignlanguage{russian}{
 \texttt{\#vitellin\# \#вителлин\# OR \#вителлины\#	other unknown}\\
-\texttt{ \#telephone\# \#телефон\# other unknown}
-}
-
+\texttt{\#telephone\# \#телефон\# other unknown} }
 \end{block}
-\begin{block}{ES-PO}
+\begin{block}{SPA-POR}
 \texttt{\#teléfono\# \#telefone\#	other	unknown}\\
 \texttt{\#thermosphaera\# \#thermosphaera\#	other	unknown}
 \end{block}
@@ -310,9 +305,9 @@ Précision&Distance d'édition\\
 
 \section{Conclusion}
 \begin{frame}
-\tableofcontents[currentsection]
+\tableofcontents[currentsection, hideothersubsections]
 \end{frame}
-\begin{frame}
+\begin{frame}[allowframebreaks]
     \frametitle{Bibliography}
     {\fontsize{0.8em}{1em}
     \nocite{*}
