--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -228,7 +228,7 @@ p(\textbf{s}|\textbf{o}) = \frac{1}{Z_0}exp(\sum_{t=1}^T\sum_k \lambda_k f_k(...
 \end{frame}
 
 \begin{frame}[fragile]
-\frametitle{CRF}
+\frametitle{Champs conditonnels aléatoires}
 	\begin{block}{Méthode}
 		\begin{itemize}
 		\item Alignement grâce à dpalign
@@ -251,7 +251,7 @@ p(\textbf{s}|\textbf{o}) = \frac{1}{Z_0}exp(\sum_{t=1}^T\sum_k \lambda_k f_k(...
 
 \begin{frame}
 \frametitle{Résultats}
-\begin{block}{Métriques}
+\begin{block}{Résultats}
 \begin{center}
 \begin{table}[H]
 \caption{Résultats pour le jeu de données \emph{Espagnol-Portugais} }
