ajout d'une image crf

--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -233,12 +233,20 @@ Support $s$&Longueur $l$&Confiance $c$&Précision&Distance&Règles\\
 
 \begin{frame}
 \frametitle{Présentation}
-\begin{block}{Équation principale des CRF}
-\begin{equation}
-p(\textbf{s}|\textbf{o}) = \frac{1}{Z_0}exp(\sum_{t=1}^T\sum_k \lambda_k f_k(...))
-\label{eqcrf}
-\end{equation}
-\end{block}
+    \begin{block}{Équation principale des CRF}
+        \begin{equation}
+            p(\textbf{s}|\textbf{o}) = \frac{1}{Z_0}exp(\sum_{t=1}^T\sum_k \lambda_k f_k(...))
+            \label{eqcrf}
+        \end{equation}
+    \end{block}
+    \begin{figure}[H]
+        \label{imagecrf}
+        %\caption{Traduction et translittération}
+        \centering
+        \vspace{0.3cm}
+        \includegraphics[width=\textwidth]{crf.png}
+    \end{figure}
+
 \end{frame}
 
 \begin{frame}[fragile]
@@ -317,6 +325,13 @@ Précision&Distance d'édition\\
 
 \begin{frame}
     \frametitle{Conclusion}
+    \begin{block}{}
+    \begin{itemize}
+        \item Possibilité d'optimiser le réglage des paramètres
+        \item Bruit dans les données
+        \item Approches futures: Étudier translittération inverse
+    \end{itemize}
+\end{block}
     \url{https://code.google.com/p/transliteration}
 \end{frame}
 
