--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -55,7 +55,7 @@
 
 
 \begin{frame}
-\frametitle{Introduction: le projet}
+\frametitle{Le projet}
 %\framesubtitle{Le projet}
 
 	\begin{block}{L'objectif}
@@ -77,7 +77,7 @@
 \end{frame}
 
 \begin{frame}[fragile]
-\frametitle{Introduction: le projet : exemples}
+\frametitle{Le projet : exemples}
 \begin{block}{ENG-RUS}
 \foreignlanguage{russian}{
 \texttt{\#vitellin\# \#вителлин\# OR \#вителлины\#	other unknown}\\
@@ -120,6 +120,8 @@
 \begin{frame}
 \tableofcontents[currentsection, hideothersubsections]
 \end{frame}
+
+
 
 
 
@@ -212,10 +214,17 @@ Support $s$&Longueur $l$&Confiance $c$&Précision&Distance&Règles\\
 \normalsize
 \end{frame}
 
+
+
+
 \subsection{Traduction statistique}
+
+
 \begin{frame}
-\tableofcontents[currentsection]
+\tableofcontents[sectionstyle=show/shaded, subsectionstyle=show/shaded/hide] 
 \end{frame}
+
+
 \begin{frame}
     \frametitle{Traduction statistique}
     \begin{figure}[H]
@@ -288,7 +297,14 @@ SPA-POR&\textbf{71.5\%}&\textbf{0.73}&3.46\\
 \end{table}
 \end{frame}
 
+
+
 \subsection{CRF}
+
+
+\begin{frame}
+\tableofcontents[sectionstyle=show/shaded, subsectionstyle=show/shaded/hide] 
+\end{frame}
 
 \begin{frame}
 \frametitle{Présentation}
