Presentation: minor update

--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -36,7 +36,7 @@
 	%\framesubtitle{Translittération}
 	\begin{block}{Definition}
 	%Remplacement d'un graphème d'un système d'écriture par un ou plusieurs graphèmes d'un autre système d'écriture
-        Conversion de texte d'un système d'écriture à un autre, en substitutant des \emph{graphèmes} ou des \emph{phonèmes}.
+        Conversion d'un mot d'un système d'écriture à un autre, en substitutant des \emph{graphèmes} ou des \emph{phonèmes}.
     \end{block}	    
     
 	\begin{exampleblock}{Exemple: anglais - hindi}
@@ -113,7 +113,7 @@
 	
 \end{frame}
 
-\section{Translittération}
+\section{Translittération automatique}
 
 \begin{frame}
 \tableofcontents[currentsection, hideothersubsections]
